--- a/README.textile
+++ b/README.textile
@@ -7,12 +7,13 @@ h2. INSTALLATION
 
 h2. DESCRIPTION
 
-This is a collection of capistrano recipes which will grow to encompass many useful recipes. The intended use for these recipes is for a rails project which deploys using the Phusion Passenger module of Apache. In addition, recipes for the management of various daemon processes will be included as needed. Feel free to contribute to this and make it better!
+This is a collection of capistrano recipes which will grow to encompass many useful recipes. The intended use for these recipes is for a ruby project which deploys using Phusion Passenger and caches using memcached. In addition, recipes for the management of various daemon processes will be included as needed. Feel free to contribute to this and make it better!
 
 Currently included:
 
  * Phusion Passenger (Setup and Deployment)
  * Apache Server
+ * Memcache Process
  * Juggernaut Daemon
  * Backgroundrb Server
  
