--- a/README.textile
+++ b/README.textile
@@ -47,8 +47,27 @@ If you wish to cherry-pick specific tasks, you can also include the management t
 
 h2. USAGE
 
+h3. Apache
 
-h3. General
+h4. Configuration
+
+  * apache_init_path - the path to the init.d apache file [default: '/etc/init.d/apache2']
+
+h4. Tasks
+
+h5. manage.rb
+
+  apache
+    :stop
+    :start
+    :restart
+    
+h5. install.rb
+
+  apache
+    :install
+
+h3. Passenger
 
 h4. Configuration
 
@@ -62,51 +81,40 @@ The following files and folders are expected to exist:
 
 h4. Tasks
 
+h5. manage.rb
+
   deploy
     :start
     :stop
     :restart
     :with_migrations
-  install
-    :gems
-  sweep
-    :gems
+      
+h5. install.rb
 
-h3. Apache
-
-h4. Configuration
-
-  * apache_init_path - the path to the init.d apache file [default: '/etc/init.d/apache2']
-
-h4. Tasks
-
-  apache
-    :stop
-    :start
-    :restart
-    :install
-
-h3. Passenger
-
-h4. Tasks
-
-  passenger
-    install
-      :install_apache_module
-      :update_config
+ passenger
+   :install
 
 h3. Rails
 
 h4. Tasks
 
+h5. tasks.rb
+
   rails
     :symlink_db_config
     :repair_permissions
     :tail - tail production log
-    :ping - ping the server, to start it
+    :ping - ping the server to start it
     sweep
       :cache
       :log
+      
+h5. hooks.rb
+
+  after "deploy:update_code", "rails:copy_config" # copy database.yml file to release path
+  after "deploy:update_code", "rails:sweep:cache" # clear cache after updating code
+  after "deploy:restart"    , "rails:repair_permissions" # fix the permissions to work properly
+  after "deploy:restart"    , "rails:ping" # ping passenger to start the rails instance
       
 h3. Backgroundrb
 
@@ -118,14 +126,20 @@ h4. Configuration
 
 h4. Tasks
 
-  tasks:
-    backgroundrb
-      :stop
-      :start
-      :restart
-      :copy_config
-      :tail
+h5. manage.rb
 
+  backgroundrb
+    :stop
+    :start
+    :restart
+    :copy_config
+    :tail
+      
+h5. hooks.rb
+
+  after "deploy:update_code"   , "backgroundrb:copy_config" # copy backgroundrb config to release
+  after "deploy:restart"       , "backgroundrb:restart"     # restart backgroundrb daemon
+  after "backgroundrb:restart" , "backgroundrb:repair_permissions" # restart backgroundrb damon
 
 h3. Juggernaut
 
@@ -137,14 +151,19 @@ h4. Configuration
 
 h4. Tasks
 
-  tasks:
-    juggernaut
-      :start
-      :stop
-      :restart
-      :copy_config
-      :tail
+h5. manage.rb
 
+  juggernaut
+    :start
+    :stop
+    :restart
+    :copy_config
+    :tail
+
+h5. hooks.rb
+
+  after "deploy:update_code", "juggernaut:copy_config" # copy juggernaut.yml to release
+  after "deploy:restart"    , "juggernaut:restart"     # restart juggernaut daemon
 
 h3. Memcache
 
@@ -154,15 +173,22 @@ h4. Configuration
 
 h4. Tasks
 
-  tasks:
-    memcache
-      :start
-      :stop
-      :restart
-      :install
+h5. manage.rb
 
+  memcache
+    :start
+    :stop
+    :restart
+    
+h5. install.rb
 
+  memcache
+    :install
+    
+h5. hooks
 
+  after "deploy:restart", "memcache:restart" # clear cache after updating code
+    
 h2. EXAMPLE
 
 Here is a sample deploy.rb file using cap_recipes:
